--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@tanstack/react-start": "^1.139.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "intlayer": "^7.3.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-intlayer": "^7.3.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17"
   },
@@ -32,6 +34,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.4",
+    "vite-intlayer": "^7.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
