Fixed error with css Change to nitro with bun

--- a/.intlayer/dictionary/app.json
+++ b/.intlayer/dictionary/app.json
@@ -36,7 +36,6 @@
     }
   },
   "localIds": [
-    "app::local::src\\contents\\index.content.ts",
-    "app::local::src\\contents\\page.content.ts"
+    "app::local::src\\contents\\index.content.ts"
   ]
 }
