--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.1.1",
     "intlayer": "^7.3.0",
     "lucide-react": "^0.554.0",
+    "nitro": "3.0.1-alpha.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-intlayer": "^7.3.0",
