--- a/package.json
+++ b/package.json
@@ -13,20 +13,46 @@
     "start": "bun run .output/server/index.mjs"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-form": "^1.26.0",
     "@tanstack/react-router": "^1.139.3",
     "@tanstack/react-start": "^1.139.3",
+    "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "intlayer": "^7.3.0",
     "lucide-react": "^0.554.0",
+    "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.1",
+    "pg": "^8.16.3",
     "react": "^19.2.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.66.1",
     "react-intlayer": "^7.3.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "uplot": "^1.6.32",
+    "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
