--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "date-fns-tz": "^3.2.0",
     "intlayer": "^7.3.0",
     "lucide-react": "^0.554.0",
+    "mqtt": "^5.14.1",
     "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.1",
     "pg": "^8.16.3",
