--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "intlayer": "^7.3.0",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.554.0",
     "mqtt": "^5.14.1",
     "next-themes": "^0.4.6",
