--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   "author": "",
   "license": "ISC",
   "type": "module",
+  "sideEffects": [
+    "*.css"
+  ],
   "scripts": {
     "dev": "vite dev",
     "build": "bun --bun vite build",
     "start": "bun run .output/server/index.mjs"
   },
   "dependencies": {
+    "@fontsource/inter-tight": "^5.2.7",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
