--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.4",
