--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mqtt": "^5.14.1",
     "next-themes": "^0.4.6",
     "nitro": "3.0.1-alpha.1",
+    "pdfmake": "^0.2.20",
     "pg": "^8.16.3",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.2",
@@ -63,6 +64,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/pdfmake": "^0.2.12",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
