--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.4",
+    "vite": "8.0.0-beta.0",
     "vite-intlayer": "^7.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
