--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-form": "^1.26.0",
+    "@tanstack/react-query": "^5.90.11",
     "@tanstack/react-router": "^1.139.3",
     "@tanstack/react-start": "^1.139.3",
     "@tanstack/react-table": "^8.21.3",
