added test server env

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ VITE_MQTT_TOPIC=019a6d34-3cf4-7e8c-82cc-8f22a247d207
 VITE_TANKVIEW_ROWS=2
 VITE_TANKVIEW_COLS=3
 VITE_API_URL=http://100.124.190.126:5000
+DB_TEST=test567
