Alarms and reports fixes

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-VITE_MQTT_PROTOCOL=wss
-VITE_MQTT_HOST=b0a12ad0.ala.eu-central-1.emqxsl.com
-VITE_MQTT_PORT=8084
-VITE_MQTT_TOPIC=019a6d34-3cf4-7e8c-82cc-8f22a247d207
+VITE_MQTT_PROTOCOL=ws
+VITE_MQTT_HOST=localhost
+VITE_MQTT_PORT=8080
+VITE_MQTT_TOPIC=calcdata
 VITE_TANKVIEW_ROWS=2
 VITE_TANKVIEW_COLS=3
-VITE_API_URL=http://100.124.190.126:5000
+API_URL=http://localhost:5000
 DB_TEST=test567
