--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "dev": "vite dev",
-    "build": "bun --bun vite build",
+    "build": "vite build",
     "start": "bun run .output/server/index.mjs"
   },
   "dependencies": {
@@ -72,7 +72,7 @@
     "rollup-plugin-visualizer": "^6.0.5",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "vite": "8.0.0-beta.0",
+    "vite": "^7.2.7",
     "vite-intlayer": "^7.3.0",
     "vite-tsconfig-paths": "^5.1.4"
   }
