--- a/.intlayer/config/configuration.json
+++ b/.intlayer/config/configuration.json
@@ -31,7 +31,7 @@
       ".content.tsx",
       ".content.jsx"
     ],
-    "baseDir": "D:\\web\\mira-web",
+    "baseDir": "D:\\digital\\tanstack",
     "excludedPath": [
       "**/node_modules/**",
       "**/dist/**",
@@ -46,18 +46,18 @@
     ],
     "watch": true,
     "contentDir": [
-      "D:\\web\\mira-web"
+      "D:\\digital\\tanstack"
     ],
-    "moduleAugmentationDir": "D:\\web\\mira-web\\.intlayer\\types",
-    "unmergedDictionariesDir": "D:\\web\\mira-web\\.intlayer\\unmerged_dictionary",
-    "remoteDictionariesDir": "D:\\web\\mira-web\\.intlayer\\remote_dictionary",
-    "dictionariesDir": "D:\\web\\mira-web\\.intlayer\\dictionary",
-    "dynamicDictionariesDir": "D:\\web\\mira-web\\.intlayer\\dynamic_dictionary",
-    "fetchDictionariesDir": "D:\\web\\mira-web\\.intlayer\\fetch_dictionary",
-    "typesDir": "D:\\web\\mira-web\\.intlayer\\types",
-    "mainDir": "D:\\web\\mira-web\\.intlayer\\main",
-    "configDir": "D:\\web\\mira-web\\.intlayer\\config",
-    "cacheDir": "D:\\web\\mira-web\\.intlayer\\cache",
+    "moduleAugmentationDir": "D:\\digital\\tanstack\\.intlayer\\types",
+    "unmergedDictionariesDir": "D:\\digital\\tanstack\\.intlayer\\unmerged_dictionary",
+    "remoteDictionariesDir": "D:\\digital\\tanstack\\.intlayer\\remote_dictionary",
+    "dictionariesDir": "D:\\digital\\tanstack\\.intlayer\\dictionary",
+    "dynamicDictionariesDir": "D:\\digital\\tanstack\\.intlayer\\dynamic_dictionary",
+    "fetchDictionariesDir": "D:\\digital\\tanstack\\.intlayer\\fetch_dictionary",
+    "typesDir": "D:\\digital\\tanstack\\.intlayer\\types",
+    "mainDir": "D:\\digital\\tanstack\\.intlayer\\main",
+    "configDir": "D:\\digital\\tanstack\\.intlayer\\config",
+    "cacheDir": "D:\\digital\\tanstack\\.intlayer\\cache",
     "watchedFilesPattern": [
       "/**/*.content.ts",
       "/**/*.content.js",
@@ -70,17 +70,17 @@
       "/**/*.content.jsx"
     ],
     "watchedFilesPatternWithPath": [
-      "D:/web/mira-web/**/*.content.ts",
-      "D:/web/mira-web/**/*.content.js",
-      "D:/web/mira-web/**/*.content.cjs",
-      "D:/web/mira-web/**/*.content.cjx",
-      "D:/web/mira-web/**/*.content.mjs",
-      "D:/web/mira-web/**/*.content.mjx",
-      "D:/web/mira-web/**/*.content.json",
-      "D:/web/mira-web/**/*.content.tsx",
-      "D:/web/mira-web/**/*.content.jsx"
+      "D:/digital/tanstack/**/*.content.ts",
+      "D:/digital/tanstack/**/*.content.js",
+      "D:/digital/tanstack/**/*.content.cjs",
+      "D:/digital/tanstack/**/*.content.cjx",
+      "D:/digital/tanstack/**/*.content.mjs",
+      "D:/digital/tanstack/**/*.content.mjx",
+      "D:/digital/tanstack/**/*.content.json",
+      "D:/digital/tanstack/**/*.content.tsx",
+      "D:/digital/tanstack/**/*.content.jsx"
     ],
-    "outputFilesPatternWithPath": "D:/web/mira-web/.intlayer/dictionary/**/*.json"
+    "outputFilesPatternWithPath": "D:/digital/tanstack/.intlayer/dictionary/**/*.json"
   },
   "editor": {
     "applicationURL": "",
@@ -102,7 +102,7 @@
   "build": {
     "importMode": "static",
     "traversePattern": [
-      "**/*.{js,ts,mjs,cjs,jsx,tsx,mjx,cjx,vue,svelte,svte}",
+      "**/*.{tsx,ts,js,mjs,cjs,jsx,mjx,cjx,vue,svelte,svte}",
       "!**/node_modules/**"
     ],
     "outputFormat": [
@@ -135,7 +135,7 @@
   },
   "metadata": {
     "name": "Intlayer",
-    "version": "7.3.13",
+    "version": "7.4.0",
     "doc": "https://intlayer.org/docs"
   }
 }
